# whack

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CONTRIBUTING.md  CONTRIBUTORS.md  Doxyfile  LICENSE  README.md  TODO.md  error.hpp  format.hpp  keywords.txt  main.cpp  main.w  module.hpp  parser.hpp  parserlist.def  parsermembers.def  reserved.def  types.hpp  whack.grammar  whack.sublime-syntax
ast/: addrof.hpp  alias.hpp  args.hpp  arraytype.hpp  assign.hpp  ast.hpp  asts.hpp  body.hpp  boolean.hpp  boolexpr.hpp  breakstmt.hpp  callable.hpp  character.hpp  closure.hpp  comparison.hpp  compileropt.hpp  condition.hpp  conditional.hpp  continuestmt.hpp  coreturnstmt.hpp  dataclass.hpp  declassign.hpp  deferstmt.hpp  deletestmt.hpp  deref.hpp  element.hpp  enumeration.hpp  expandop.hpp  expansion.hpp  exports.hpp  expression.hpp  externfunc.hpp  factor.hpp  floatingpt.hpp  fnalignof.hpp  fnappend.hpp  fncast.hpp  fnlen.hpp  fnsizeof.hpp  fntype.hpp  (+50 more)
include/mpc/: mpc.h
include/whack/: error.hpp  format.hpp  parser.hpp  target.hpp
include/whack/codegen/: fwd.hpp  metadata.hpp  module.hpp  tags.hpp
include/whack/codegen/elements/: alias.hpp  args.hpp  comment.hpp  compileropt.hpp  dataclass.hpp  element.hpp  enumeration.hpp  exports.hpp  externfunc.hpp  function.hpp  interface.hpp  moduleuse.hpp  (+3 more)
include/whack/pass/: manager.hpp
lib/mpc/: mpc.c
lib/whack/: main.cpp
lib/whack/runtime/: runtime.c
mpc/: mpc.c  mpc.h
pass/: ctor.hpp
runtime/: runtime.c
scripts/: keywords.py  parsers.py  utils.py
snapshot/: main.w  whack.grammar
std/: cstd.w
(+76 files in other folders)
